style: correcting footer text spacing

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -2,6 +2,7 @@
     font-size: 12px;
     text-align: center;
     margin: 0;
+    padding-top: 8px;
 }
 
 .footer{
